--- a/Front/My-App/package.json
+++ b/Front/My-App/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "axios": "^1.6.8",
     "electron-updater": "^6.1.7"
   },
   "devDependencies": {
