--- a/Front/My-App/package.json
+++ b/Front/My-App/package.json
@@ -21,11 +21,14 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "axios": "^1.6.8",
-    "electron-updater": "^6.1.7"
+    "electron-router-dom": "^1.0.5",
+    "electron-updater": "^6.1.7",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
+    "@types/react": "^18.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
