--- a/Front/My-App/package.json
+++ b/Front/My-App/package.json
@@ -21,8 +21,10 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "electron-router-dom": "^1.0.5",
     "electron-updater": "^6.1.7",
+    "react-bootstrap": "^2.10.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
