--- a/Front/My-App/package.json
+++ b/Front/My-App/package.json
@@ -32,8 +32,9 @@
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@types/react": "^18.3.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "electron": "^28.2.0",
+    "electron": "^28.3.1",
     "electron-builder": "^24.9.1",
+    "electron-packager": "^17.1.2",
     "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
